--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Minimalist theme
-logo: /assets/img/logo.png
-email: bogus at gmail dot com
-description: Minimalist is a theme powered by Jekyll. It is modified based on the Minimal theme.
+title: Rui Zhang
+logo: /assets/img/zhrrygh.png
+email: zhrrygh[at]outlook[dot]com
+description: VENI VIDI VICI
 show_downloads: false
 google_analytics: UA-108144808-1
 color-scheme: auto
