--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ title: Rui Zhang
 logo: /assets/img/zhrrygh.png
 email: zhrrygh@outlook.com
 description: VENI VIDI VICI
-description: Postdoctoral Fellow
-description: WIoT Research Group (http://iiotc.ie.cuhk.edu.hk/)
-description: Department of Information Engineering
-description: The Chinese University of Hong Kong
+Postdoctoral Fellow
+WIoT Research Group (http://iiotc.ie.cuhk.edu.hk/)
+Department of Information Engineering
+The Chinese University of Hong Kong
 show_downloads: false
 google_analytics: UA-108144808-1
 color-scheme: auto
