--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,6 @@ title: Rui Zhang
 logo: /assets/img/zhrrygh.png
 email: zhrrygh@outlook.com
 description: VENI VIDI VICI
-Postdoctoral Fellow
-WIoT Research Group (http://iiotc.ie.cuhk.edu.hk/)
-Department of Information Engineering
-The Chinese University of Hong Kong
 show_downloads: false
 google_analytics: UA-108144808-1
 color-scheme: auto
@@ -16,6 +12,12 @@ plugins:
 
 # You can find fonts from https://iconify.design or https://fontawesome.com. Below is just an example illustrating how to use custom icons
 sidebar:
+  - name: Postdoctoral Fellow
+  - name: WIoT Research Group
+    link: http://iiotc.ie.cuhk.edu.hk/
+  - name: Department of Information Engineering
+  - name: The Chinese University of Hong Kong
+
   - name: Google Scholar
     icon: <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" style="vertical-align:-0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M5.242 13.769L0 9.5L12 0l12 9.5l-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14a7 7 0 0 0 0-14z" fill="currentColor"/></svg>
     #link: https://scholar.google.com/citations?user=zR6afi8AAAAJ
