--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Rui Zhang
 logo: /assets/img/zhrrygh.png
-email: zhrrygh@outlook.com
+email: ruizhang@cuhk.edu.hk
 description: VENI VIDI VICI
 show_downloads: false
 google_analytics: UA-108144808-1
