--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Rui Zhang
 logo: /assets/img/zhrrygh.png
 email: ruizhang@cuhk.edu.hk
-description: "A wanderer isn't always lost".
+description: A wanderer isnt always lost.
 show_downloads: false
 google_analytics: UA-108144808-1
 color-scheme: auto
