--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Rui Zhang
 logo: /assets/img/zhrrygh.png
 email: ruizhang@cuhk.edu.hk
-description: Not all those who wander are lost.
+description: We know so many things that just are not so.
 show_downloads: false
 google_analytics: UA-108144808-1
 color-scheme: auto
