--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Rui Zhang
 logo: /assets/img/zhrrygh.png
-email: ruizhang@cuhk.edu.hk
+email: zhrrygh@outlook.com
 description: Each man has but one destiny.
 show_downloads: false
 google_analytics: UA-108144808-1
